--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,7 +24,9 @@ body
 
 header 
 {
-    
+    background-image: linear-gradient( to bottom,
+                                     #fdfbfb,
+                                     #ebedee );
 }
 
 header ul
