--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,5 +83,9 @@ footer
 {
     color: #D63031 !important;
     border:2px solid #D63031;
+
+    padding-left: 8px;
+    padding-right: 8px;
+    
     border-radius: 4px;
 }
