--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,9 +24,22 @@ body
 
 header 
 {
+    position: relative;
+
     background-image: linear-gradient( to bottom,
                                      #fdfbfb,
                                      #ebedee );
+}
+
+.header-background
+{
+    position: absolute;
+
+    top: 0px;
+
+    width: 100%;
+    height: 80%;
+
 }
 
 header ul
@@ -86,6 +99,6 @@ footer
 
     padding-left: 8px;
     padding-right: 8px;
-    
+
     border-radius: 4px;
 }
