--- a/scss/templates/animation.scss
+++ b/scss/templates/animation.scss
@@ -11,5 +11,5 @@ $action-transition : 0.75s;
 {
     transition: $action-transition;
     text-decoration: none;
-    color:black;
+    color:white;
 }
