--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,6 +56,7 @@ header ul
     display: flex;
     list-style: none;
     
+    flex-direction: row;
     justify-content: space-around;
 
     text-transform: uppercase;
