align in center

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -120,6 +120,7 @@ footer
     /* For mobile phones: */
     header ul a
     {
-      width: 100%;
+        width: 100%;
+        text-align: center;
     }
   }
