remove border for mobile users

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -123,4 +123,10 @@ footer
         width: 100%;
         text-align: center;
     }
+
+    .selected
+    {
+        border: 0px solid white;
+        border-radius: 0px;
+    }
   }
