--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,4 +129,9 @@ footer
         border: 0px solid white;
         border-radius: 0px;
     }
+
+    .header-background
+    {
+        height: 98%;
+    }
   }
