--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,7 +42,7 @@ header
 
     width: 100%;
     height: 95%;
-
+    box-shadow: 0px 0px 16px black;
 }
 
 header ul
@@ -54,12 +54,10 @@ header ul
     font-size: 18px;
 
     display: flex;
-    list-style: none;
-    
     flex-wrap: wrap;
-    
-    justify-content: space-around;
 
+    list-style: none;
+    justify-content: space-around;
     text-transform: uppercase;
 }
 
@@ -116,7 +114,8 @@ footer
     
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) 
+{
     /* For mobile phones: */
     header ul a
     {
