--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,11 +26,8 @@ header
 {
     z-index: 0;
     position: relative;
-
-    background-image: linear-gradient( to bottom,
-                                     #fdfbfb,
-                                     #ebedee );
-                                     
+    
+    background-color: #090828;
     box-shadow: 0px 0px 16px black;
 }
 
@@ -38,12 +35,17 @@ header
 {
     z-index: 0;
     position: absolute;
-    background-color: #090828;
+
+    background-image: linear-gradient( to bottom,
+                                     #fdfbfb,
+                                     #ebedee );
+                                     
 
     top: 0px;
 
     width: 100%;
-    height: 95%;
+    height: 20px;
+    bottom: 0px;
 }
 
 header ul
