--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,8 @@ header
     background-color : #090828;
     box-shadow : 0px 0px 
                  16px 
-                 rgba(0, 0, 0, 0.2);
+                 rgba( 0, 0, 0, 
+                         0.2 );
 }
 
 .header-background
@@ -41,8 +42,8 @@ header
     position : absolute;
 
     background-image: linear-gradient( to bottom,
-                                      #fdfbfb,
-                                      #ebedee );
+                                       #fdfbfb,
+                                       #ebedee );
                                      
 
     width: 100%;
@@ -94,6 +95,7 @@ header ul a li
 
 main
 {
+    background-color: rgba(0,0,0, 0.2);
     
     
 
