--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,6 +121,23 @@ footer
     padding: 0px;
 }
 
+.footer-misc ul 
+{
+    display: flex;
+}
+
+.footer-misc ul a
+{
+     color: black;
+     text-decoration: none;
+    
+}
+
+.footer-misc ul a li
+{ 
+    display: block;
+}
+
 .selected
 {
     color  : #D63031 !important;
