--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,6 +134,8 @@ footer
      color: black;
      text-decoration: none;
     
+     margin-left: 20px;
+     margin-right: 20px;
 }
 
 .footer-misc ul a li
