--- a/scss/style.scss
+++ b/scss/style.scss
@@ -125,15 +125,17 @@ footer
 {
     display: flex;
     justify-content: center;
+    
     padding:0px;
     margin: 0px;
+    
+    text-transform: uppercase;
 }
 
 .footer-misc ul a
 {
      color: black;
      text-decoration: none;
-    
      margin-left: 20px;
      margin-right: 20px;
 }
