--- a/scss/style.scss
+++ b/scss/style.scss
@@ -149,6 +149,11 @@ footer
      margin-right: 20px;
 }
 
+.footer-misc ul a:hover
+{
+     color: #D63031;
+}
+
 .footer-misc ul a li
 { 
     display: block;
