--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -2,8 +2,8 @@
 {
     display: grid;
 
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
 
     grid-gap: 16px;
 }
@@ -11,5 +11,5 @@
 .container-area
 {
     grid-area: auto;
-    
+
 }
