--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -2,7 +2,7 @@
 {
     display: grid;
 
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
 
     grid-gap: 16px;
