--- a/scss/style.scss
+++ b/scss/style.scss
@@ -175,6 +175,12 @@ footer
     font-family:$footer-font; 
 }
 
+.footer-contact p 
+{
+    margin:0px;
+    padding:0px;
+}
+
 .selected
 {
     color  : #D63031 !important;
