--- a/scss/style.scss
+++ b/scss/style.scss
@@ -171,6 +171,9 @@ footer
 
 .footer-contact
 {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    
     color: white;
     font-family:$footer-font; 
 }
