--- a/scss/style.scss
+++ b/scss/style.scss
@@ -214,6 +214,29 @@ footer
     
 }
 
+// Social
+.facebook
+{
+    color:yellow;
+}
+
+.instagram
+{
+    color:yellow;
+}
+
+.twitter
+{
+    color:yellow;
+}
+
+.youtube
+{
+    color:yellow;
+}
+
+
+// Rules
 @media only screen and (max-width: 768px) 
 {
     /* For mobile phones: */
