--- a/scss/style.scss
+++ b/scss/style.scss
@@ -215,22 +215,22 @@ footer
 }
 
 // Social
-.facebook
+.facebook:hover
 {
     color:yellow;
 }
 
-.instagram
+.instagram:hover
 {
     color:yellow;
 }
 
-.twitter
+.twitter:hover
 {
     color:yellow;
 }
 
-.youtube
+.youtube:hover
 {
     color:yellow;
 }
