--- a/scss/style.scss
+++ b/scss/style.scss
@@ -217,22 +217,22 @@ footer
 // Social
 .facebook:hover
 {
-    color:yellow;
+    color:#3b5998;
 }
 
 .instagram:hover
 {
-    color:yellow;
+    color:#D63031;
 }
 
 .twitter:hover
 {
-    color:yellow;
+    color: #00aced;
 }
 
 .youtube:hover
 {
-    color:yellow;
+    color:#cc181e;
 }
 
 
