--- a/scss/style.scss
+++ b/scss/style.scss
@@ -215,6 +215,11 @@ footer
     list-style-type: none;
 }
 
+.footer-social ul a li i 
+{
+    font-size: 32px;
+}
+
 .selected
 {
     color  : #D63031 !important;
