removing margin and padding from social media buttons

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -199,6 +199,9 @@ footer
 
 .footer-social ul
 {
+    padding: 0px;
+    margin: 0px;
+    
     display: flex;
     justify-content: space-around;
 }
