--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -12,7 +12,18 @@
 {
     margin: 0px;
     padding:0px;
-    
+
     grid-area: auto;
 
 }
+
+@media only screen and (max-width: 768px) 
+{
+    /* For mobile phones: */
+    .container-area-3
+    {
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto;
+    }
+
+  }
