--- a/scss/style.scss
+++ b/scss/style.scss
@@ -153,7 +153,7 @@ footer
 
     list-style : none;
 
-    justify-content: space-around;
+    justify-content: center;
 
 
     text-transform: uppercase;
