--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,6 +242,8 @@ footer
     display: block;
     text-decoration: none;
     list-style-type: none;
+    margin: 0px;
+    padding: 0px;
 }
 
 .footer-social ul a li i
