--- a/scss/style.scss
+++ b/scss/style.scss
@@ -167,6 +167,7 @@ footer
      margin-left: 20px;
      margin-right: 20px;
      transition: $action-transition;
+     font-weight: bold;
 }
 
 .footer-misc ul a:hover
