--- a/scss/style.scss
+++ b/scss/style.scss
@@ -282,6 +282,7 @@ footer
     {
         width: 100%;
         text-align: center;
+        border-bottom: 1px solid white;
     }
 
     .selected
