--- a/scss/style.scss
+++ b/scss/style.scss
@@ -287,7 +287,7 @@ footer
 
     .selected
     {
-        border: 0px solid white;
+        border: 1px solid #D63031;
         border-radius: 0px;
     }
 
