--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,6 +19,7 @@ body
     
     grid-gap:0px;
 
+    min-height: 100%;
 }
 
 header
@@ -289,7 +290,7 @@ footer
     {
         border: 0px solid #D63031;
         border-bottom: 1px solid;
-        
+
         border-radius: 0px;
     }
 
