--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@
 @import './templates/generic.scss';
 @import './templates/animation.scss';
 
+@import './covers.scss';
+
 $header-font: 'Open Sans';
 $footer-font: 'Open Sans';
 
