--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -21,6 +21,9 @@
     border:1px solid black;
 
     background-color: gray;
+    width: 100%;
+    height: 600px;
+
 }
 
 @media only screen and (max-width: 768px)
