--- a/scss/covers.scss
+++ b/scss/covers.scss
@@ -1,1 +1,8 @@
 //
+#cover-container-homepage
+{
+    width: 100%;
+    height: 100%;
+
+    background-image: url('./images/homepage/front.png');
+}
