--- a/scss/covers.scss
+++ b/scss/covers.scss
@@ -4,5 +4,5 @@
     width: 100%;
     height: 100%;
 
-    background-image: url('/images/homepage/front.png');
+    background-image: url('../images/homepage/front.png');
 }
