--- a/scss/covers.scss
+++ b/scss/covers.scss
@@ -5,4 +5,6 @@
     height: 100%;
 
     background-image: url('../images/homepage/front.png');
+    background-size: cover;
+    background-position: center;
 }
