--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -25,6 +25,15 @@
 
 }
 
+.container-short-description
+{
+    width: 200px;
+    height: 200px;
+    
+    margin-right: auto;
+    margin-left: auto;
+}
+
 @media only screen and (max-width: 768px)
 {
     /* For mobile phones: */
