--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -33,6 +33,12 @@
     margin-left: auto;
 }
 
+.container-short-description i 
+{
+    font-size: 38px;
+    text-align: center;
+}
+
 @media only screen and (max-width: 768px)
 {
     /* For mobile phones: */
