--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -36,7 +36,8 @@
 .container-short-description i 
 {
     font-size: 38px;
-    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 @media only screen and (max-width: 768px)
