--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -36,8 +36,8 @@
 .container-short-description i 
 {
     font-size: 38px;
-    margin-right: auto;
-    margin-left: auto;
+    text-align: center;
+    width: 100%;
 }
 
 @media only screen and (max-width: 768px)
