align paragraphs in center

--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -31,6 +31,12 @@
 
     margin-right: auto;
     margin-left: auto;
+    
+}
+
+.container-short-description p 
+{
+    text-align: center;
 }
 
 .container-short-description i 
