--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -41,6 +41,9 @@
 
 .container-short-description i 
 {
+    margin-top: 16px;
+    margin-bottom: 16px;
+
     font-size: 80px;
     text-align: center;
     width: 100%;
