--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -41,6 +41,15 @@
     font-size: 14px;
 }
 
+.area 
+{
+    margin: 0px;
+    padding: 0px;
+
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+
 .container-short-description i 
 {
     margin-top: 16px;
