--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -52,7 +52,31 @@
 
 .cooperation
 {
+
+}
+
+.cooperation ul 
+{
     
+
+}
+
+.cooperation ul a 
+{
+    color: black;
+
+}
+
+.cooperation ul a li 
+{
+    
+    list-style: none;
+
+}
+
+.cooperation ul a li img 
+{
+
 }
 
 .container-short-description i 
