--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -64,12 +64,11 @@
 .cooperation ul a 
 {
     color: black;
-
+    text-decoration: none;
 }
 
 .cooperation ul a li 
 {
-    
     list-style: none;
 
 }
