--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -74,6 +74,12 @@
     text-decoration: none;
 }
 
+.horizontal-center
+{
+    position: relative;
+    height: 100%;
+}
+
 .cooperation ul a li 
 {
     list-style: none;
@@ -83,6 +89,7 @@
 .cooperation ul a li img 
 {
     width: 100px;
+    
 }
 
 .container-short-description i 
