--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -72,6 +72,8 @@
 {
     color: black;
     text-decoration: none;
+    margin: 0px;
+    padding:0px;
 }
 
 .horizontal-center
@@ -84,6 +86,8 @@
 {
     list-style: none;
     display: block;
+    margin: 0px;
+    padding: 0px;
 }
 
 .cooperation ul a li img 
