--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -74,6 +74,10 @@
     text-decoration: none;
     margin: 0px;
     padding:0px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .horizontal-center
