--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -80,6 +80,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    opacity: 0.2;
+}
+
+.cooperation ul a:hover 
+{
+    opacity: 1.0;
 }
 
 .horizontal-center
