--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -50,7 +50,7 @@
     margin-bottom: 32px;
 }
 
-.cooperation
+.cooperation_with
 {
     margin: 0px;
     height: 0px;
@@ -59,7 +59,7 @@
     width: 100%;
 }
 
-.cooperation ul 
+.cooperation_with ul 
 {
     display: flex;
     padding:0px;
@@ -70,7 +70,7 @@
     justify-content: space-around;
 }
 
-.cooperation ul a 
+.cooperation_with ul a 
 {
     color: black;
     text-decoration: none;
@@ -83,7 +83,7 @@
     opacity: 0.2;
 }
 
-.cooperation ul a:hover 
+.cooperation_with ul a:hover 
 {
     opacity: 1.0;
 }
@@ -96,14 +96,14 @@
     width: 15%;
 }
 
-.cooperation ul a li 
+.cooperation_with ul a li 
 {
     list-style: none;
     margin: 0px;
     padding: 0px;
 }
 
-.cooperation ul a li img 
+.cooperation_with ul a li img 
 {
     width: 100%;
     height: auto;
