--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -96,6 +96,12 @@
     width: 15%;
 }
 
+.cooperation_area p
+{
+    font-family: 'Open Sans';
+
+}
+
 .cooperation_with ul a li 
 {
     list-style: none;
