--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -99,6 +99,9 @@
 .cooperation_area p
 {
     font-family: 'Open Sans';
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
 
 }
 
