--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -102,6 +102,17 @@
     text-transform: uppercase;
     text-align: center;
     width: 100%;
+}
+
+.center
+{
+    text-align: center;
+
+}
+
+.about_us_area
+{
+    font-family: 'Open Sans';
 
 }
 
