--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -107,13 +107,17 @@
 .center
 {
     text-align: center;
-
 }
 
 .about_us_area
 {
     font-family: 'Open Sans';
+}
 
+.about_us_area p 
+{
+    margin-left: 32px;
+    margin-right: 32px;
 }
 
 .cooperation_with ul a li 
