--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -116,8 +116,10 @@
 
 .about_us_area p 
 {
+    margin-top: 8px;
     margin-left: 32px;
     margin-right: 32px;
+    margin-bottom: 0px;
 }
 
 .cooperation_with ul a li 
