--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -114,6 +114,12 @@
     font-family: 'Open Sans';
 }
 
+.title
+{
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
 .about_us_area p 
 {
     margin-top: 8px;
