--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -29,6 +29,10 @@
 {
     width: 300px;
 
+    background-image: linear-gradient( to bottom,
+                                       #fdfbfb,
+                                       #ebedee );
+
     margin-right: auto;
     margin-left: auto;
     
