--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -25,13 +25,17 @@
 
 }
 
+/* 
+Overvej noget lignende ?
+background-image: linear-gradient( to bottom,
+                                       #fdfbfb,
+                                       #ebedee );
+*/
+
 .container-short-description
 {
     width: 300px;
 
-    background-image: linear-gradient( to bottom,
-                                       #fdfbfb,
-                                       #ebedee );
 
     margin-right: auto;
     margin-left: auto;
