--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -69,13 +69,13 @@ background-image: linear-gradient( to bottom,
 
 .cooperation_with ul 
 {
-    display: flex;
+    
     padding:0px;
     margin:0px;
 
     width: 100%;
     height: 100%;
-    justify-content: space-around;
+    
 }
 
 .cooperation_with ul a 
@@ -84,10 +84,10 @@ background-image: linear-gradient( to bottom,
     text-decoration: none;
     margin: 0px;
     padding:0px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    //position: absolute;
+    //top: 50%;
+    //left: 50%;
+    //transform: translate(-50%, -50%);
     opacity: 0.2;
 }
 
@@ -98,8 +98,7 @@ background-image: linear-gradient( to bottom,
 
 .horizontal-center
 {
-    display: block;
-    position: relative;
+    
     height: 100%;
     width: 15%;
 }
