--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -69,8 +69,8 @@ background-image: linear-gradient( to bottom,
 {
     display: grid;
     grid-gap: 8px;
-    grid-template-rows: auto auto auto auto auto;
-    grid-template-columns: auto;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto;
     padding:0px;
     margin:0px;
 
