--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -69,7 +69,7 @@ background-image: linear-gradient( to bottom,
 {
     display: grid;
     grid-gap: 8px;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
     padding:0px;
     margin:0px;
