--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -85,10 +85,10 @@ background-image: linear-gradient( to bottom,
     text-decoration: none;
     margin: 0px;
     padding:0px;
-    //position: absolute;
-    //top: 50%;
-    //left: 50%;
-    //transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     opacity: 0.2;
 }
 
@@ -100,6 +100,7 @@ background-image: linear-gradient( to bottom,
 .horizontal-center
 {
     grid-area: auto;
+    position: relative;
     height: 100%;
     width: 100%;
 }
