--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -70,12 +70,11 @@ background-image: linear-gradient( to bottom,
     display: grid;
     grid-gap: 8px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 200px;
     padding:0px;
     margin:0px;
 
     width: 100%;
-    height: 100%;
     
 }
 
@@ -83,8 +82,10 @@ background-image: linear-gradient( to bottom,
 {
     color: black;
     text-decoration: none;
+
     margin: 0px;
     padding:0px;
+    
     position: absolute;
     top: 50%;
     left: 50%;
@@ -101,6 +102,7 @@ background-image: linear-gradient( to bottom,
 {
     grid-area: auto;
     position: relative;
+    
     height: 100%;
     width: 100%;
 }
