--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -68,12 +68,14 @@ background-image: linear-gradient( to bottom,
 .cooperation_with ul 
 {
     display: grid;
+
     grid-gap: 32px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 200px;
     padding:0px;
     margin:0px;
-
+    margin-left: 16px;
+    margin-right: 16px;
     width: 100%;
     
 }
