--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -63,6 +63,8 @@ background-image: linear-gradient( to bottom,
     margin: 0px;
 
     width: 100%;
+    padding-left: 32px;
+    padding-right: 32px;
 }
 
 .cooperation_with ul 
@@ -74,8 +76,7 @@ background-image: linear-gradient( to bottom,
     grid-template-rows: 200px;
     padding:0px;
     margin:0px;
-    margin-left: 16px;
-    margin-right: 16px;
+    
     width: 100%;
     
 }
