--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -73,10 +73,14 @@ background-image: linear-gradient( to bottom,
     grid-gap: 32px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 200px;
+
+    width: 100%;
+
     padding:0px;
     margin:0px;
     
-    width: 100%;
+    margin-right: 16px;
+    margin-left: 16px;
     
 }
 
