--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -72,7 +72,7 @@ background-image: linear-gradient( to bottom,
 
     grid-gap: 32px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 200px;
+    grid-template-rows: auto;
 
     width: 100%;
 
