--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -79,6 +79,7 @@ background-image: linear-gradient( to bottom,
     grid-template-rows: auto;
 
     width: 100%;
+    height: 200px;
 
     padding:0px;
     margin:0px;
