--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -73,7 +73,7 @@ background-image: linear-gradient( to bottom,
     grid-gap: 32px;
 
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 150px;
 
     width: 100%;
 
