--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -89,6 +89,9 @@ background-image: linear-gradient( to bottom,
     margin: 0px;
     padding:0px;
 
+    margin-right: auto;
+    margin-left: auto;
+
     height: auto;
     width: 100%;
     
