--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -61,6 +61,8 @@ background-image: linear-gradient( to bottom,
 .cooperation_with
 {
     margin: 0px;
+    margin-right: 16px;
+    margin-left: 16px;
 
     width: 100%;
     
