--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -62,8 +62,9 @@ background-image: linear-gradient( to bottom,
 {
     margin: 0px;
     
-
     width: 95%;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
