--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -188,7 +188,7 @@ background-image: linear-gradient( to bottom,
 
     .cooperation_with ul 
     {
-        grid-template-columns: 150px;
+        grid-template-columns: auto;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     }
 
