--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -192,4 +192,9 @@ background-image: linear-gradient( to bottom,
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     }
 
+    .cooperation_with ul a 
+    {
+        position: block;
+    }
+
   }
