--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -184,7 +184,7 @@ background-image: linear-gradient( to bottom,
 
     .cooperation_with ul 
     {
-        grid-template-columns: auto;
+        grid-template-columns: 80%;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     }
   }
