--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -185,7 +185,7 @@ background-image: linear-gradient( to bottom,
 
     .cooperation_with ul 
     {
-        grid-template-columns: 80%;
+        grid-template-columns: auto;
         grid-template-rows: auto auto auto auto auto;
     }
   }
