--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,10 +18,8 @@ body
 
     grid-template-rows   : auto auto auto;
     grid-template-columns: auto;
-    
-    grid-gap:0px;
 
-    
+    grid-gap:0px;
 }
 
 header
@@ -32,28 +30,10 @@ header
 
     background-color : #090828;
 
-    box-shadow : 0px 0px 
-                 16px 
+    box-shadow : 0px 0px
+                 16px
                  rgba( 0, 0, 0, 
                          0.2 );
-}
-
-.header-background
-{
-    @extend %extend-width;
-
-    z-index  : 0;
-
-    position : absolute;
-
-    background-image: linear-gradient( to bottom,
-                                       #fdfbfb,
-                                       #ebedee );
-                                     
-
-    height: 3px;
-
-    bottom: 5px;
 }
 
 header ul
@@ -78,8 +58,6 @@ header ul
 header ul a
 {
     @extend %rest;
-    
-    z-index: 2;
 
     font-size: 0.875rem;
 
@@ -108,53 +86,50 @@ main
 //
 footer
 {
+    @extend %no-margin-or-padding;
+    
     width: 100%;
-    
-    margin: 0px;
-    padding: 0px;
 
-    
     background-color: #090828;
-
 }
 
 .footer-misc
 {
     @extend %not-selecteble;
-
-    margin: 0px;
-    padding: 0px;
-
+    @extend %no-margin-or-padding;
 
     font-family: $footer-font;
 
     width: 100%;
 
-    background-color: white;
-    color: black;
+    background-color : white;
+    color            : black;
 }
 
 .footer-misc p
 {
-    margin:0px;
-    padding: 0px;
-    font-size: 12px;
+    @extend %no-margin-or-padding;
 
-    width: 100%;
-    text-align: center;
-    text-transform: uppercase;
+    font-size : 12px;
+
+    width : 100%;
+
+    text-align      : center;
+    text-transform  : uppercase;
 }
 
-.footer-misc ul 
+.footer-misc ul
 {
+    @extend %no-margin-or-padding;
 
-    padding:0px;
-    margin: 0px;
     display : flex;
+    
     flex-wrap : wrap;
     list-style : none;
+
     justify-content: center;
     text-transform: uppercase;
+
     font-size: 0.875rem;
 }
 
@@ -162,15 +137,16 @@ footer
 {
      color: black;
      text-decoration: none;
-     margin-left: 20px;
-     margin-right: 20px;
+
+     margin-left  : 20px;
+     margin-right : 20px;
+     
      font-weight: bold;
 }
 
 .footer-misc ul a:hover
 {
-    
-     color: #D63031;
+     color : #D63031;
 }
 
 .footer-misc ul a li
@@ -189,7 +165,6 @@ footer
 
 .mail
 {
-    
     text-decoration: none;
     color:white;
 }
@@ -202,8 +177,8 @@ footer
 
 .footer-contact p
 {
-    margin:0px;
-    padding:0px;
+    @extend %no-margin-or-padding;
+
     width: 100%;
     text-align: center;
     
@@ -218,8 +193,7 @@ footer
 
 .footer-social ul
 {
-    padding: 0px;
-    margin: 0px;
+    @extend %no-margin-or-padding;
 
     display: flex;
     justify-content: space-around;
@@ -227,8 +201,8 @@ footer
 
 .footer-social ul a
 {
-    margin:0px;
-    padding: 0px;
+    @extend %no-margin-or-padding;
+
     color: white;
     
 }
@@ -297,6 +271,7 @@ footer
     {
         margin: 0px !important;
         padding: 0px !important;
+
         width: 100%;
         text-align: center;
         border-bottom: 1px solid black;
