--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -10,8 +10,7 @@
 
 .container-area
 {
-    margin: 0px;
-    padding:0px;
+    @extend %no-margin-or-padding;
 
     grid-area: auto;
 }
@@ -25,34 +24,26 @@
 
 }
 
-/* 
-Overvej noget lignende ?
-background-image: linear-gradient( to bottom,
-                                       #fdfbfb,
-                                       #ebedee );
-*/
-
 .container-short-description
 {
     width: 300px;
 
-
-    margin-right: auto;
-    margin-left: auto;
+    margin-right : auto;
+    margin-left  : auto;
     
 }
 
 .container-short-description p 
 {
     text-align: center;
+
     font-family: 'Open Sans';
     font-size: 14px;
 }
 
 .area 
 {
-    margin: 0px;
-    padding: 0px;
+    @extend %no-margin-or-padding;
 
     margin-top: 32px;
     margin-bottom: 32px;
@@ -60,9 +51,10 @@ background-image: linear-gradient( to bottom,
 
 .cooperation_with
 {
-    margin: 0px;
+    @extend %no-margin;
     
     width: 95%;
+
     margin-left: auto;
     margin-right: auto;
     
@@ -70,6 +62,8 @@ background-image: linear-gradient( to bottom,
 
 .cooperation_with ul 
 {
+    @extend %no-margin-or-padding;
+
     display: grid;
 
     grid-gap: 32px;
@@ -78,19 +72,14 @@ background-image: linear-gradient( to bottom,
     grid-template-rows: 150px;
 
     width: 100%;
-
-    padding:0px;
-    margin:0px;
-    
 }
 
 .cooperation_with ul a 
 {
+    @extend %no-margin-or-padding;
+
     color: black;
     text-decoration: none;
-
-    margin: 0px;
-    padding:0px;
 
     height: auto;
     width: 100%;
@@ -151,9 +140,8 @@ background-image: linear-gradient( to bottom,
 
 .cooperation_with ul a li 
 {
+    @extend %no-margin-or-padding;
     list-style: none;
-    margin: 0px;
-    padding: 0px;
 }
 
 .cooperation_with ul a li img 
