--- a/scss/templates/containers.scss
+++ b/scss/templates/containers.scss
@@ -45,8 +45,8 @@
 {
     @extend %no-margin-or-padding;
 
-    margin-top: 32px;
-    margin-bottom: 32px;
+    margin-top: 32px !important;
+    margin-bottom: 32px !important;
 }
 
 .cooperation_with
@@ -159,6 +159,7 @@
 
     font-size: 80px;
     text-align: center;
+
     width: 100%;
 }
 
@@ -167,14 +168,14 @@
     /* For mobile phones: */
     .container-area-3
     {
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto;
+        grid-template-columns : auto;
+        grid-template-rows    : auto auto auto;
     }
 
     .cooperation_with ul 
     {
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto auto auto;
+        grid-template-columns : auto;
+        grid-template-rows    : auto auto auto auto auto;
     }
   }
 
@@ -183,8 +184,10 @@
     .cooperation_with ul a 
     {
         position: absolute;
+        
         top: 50%;
         left: 50%;
+
         transform: translate(-50%, -50%);
     }
 
