--- a/scss/style.scss
+++ b/scss/style.scss
@@ -252,7 +252,8 @@ footer
     /* For mobile phones: */
     header ul a
     {
-        @extend %extend-width;
+        width: 100%;
+
         text-align: center;
         border-bottom: 1px solid white;
     }
@@ -267,7 +268,7 @@ footer
 
     .footer-misc ul a
     {
-        @extend %extend-width;
+        width: 100%;
 
         margin  : 0px !important;
         padding : 0px !important;
