--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,282 +4,14 @@
 
 @import './templates/containers.scss';
 
+@import './page/header.scss';
+@import './page/footer.scss';
+@import './page/body.scss';
+@import './page/rules.scss';
+
 @import './covers.scss';
 
 $header-font: 'Open Sans';
 $footer-font: 'Open Sans';
 
-body
-{
-    @extend %extend-fully;
-    @extend %no-margin-or-padding;
-
-    display : grid;
-
-    grid-template-rows   : auto auto auto;
-    grid-template-columns: auto;
-
-    grid-gap:0px;
-}
-
-header
-{
-    z-index  : 0;
-
-    position : relative;
-
-    background-color : #090828;
-
-    box-shadow : 0px 0px
-                 16px
-                 rgba( 0, 0, 0, 
-                         0.2 );
-}
-
-header ul
-{
-    @extend %not-selecteble;
-    @extend %no-margin-or-padding;
-
-    font-family : $header-font;
-    font-size   : 18px;
-
-    display : flex;
-
-    flex-wrap : wrap;
-
-    list-style : none;
-
-    justify-content: space-around;
-
-    text-transform : uppercase;
-}
-
-header ul a
-{
-    @extend %rest;
-
-    font-size: 0.875rem;
-
-    margin-top: 8px;
-    margin-bottom: 8px;
-}
-
-header ul a:hover
-{
-    @extend %activate;
-
-}
-
-header ul a li
-{
-    display: block;
-
-}
-
-//
-main
-{
-    min-height: 600px;
-}
-
-//
-footer
-{
-    @extend %extend-width;
-    @extend %no-margin-or-padding;
-
-    background-color: #090828;
-}
-
-.footer-misc
-{
-    @extend %not-selecteble;
-    @extend %no-margin-or-padding;
-    @extend %extend-width;
-
-    font-family: $footer-font;
-
-    background-color : white;
-    color            : black;
-}
-
-.footer-misc p
-{
-    @extend %no-margin-or-padding;
-    @extend %extend-width;
-
-    font-size : 12px;
-
-    text-align      : center;
-    text-transform  : uppercase;
-}
-
-.footer-misc ul
-{
-    @extend %no-margin-or-padding;
-
-    display : flex;
-    
-    flex-wrap : wrap;
-    list-style : none;
-
-    justify-content: center;
-    text-transform: uppercase;
-
-    font-size: 0.875rem;
-}
-
-.footer-misc ul a
-{
-     color: black;
-     text-decoration: none;
-
-     margin-left  : 20px;
-     margin-right : 20px;
-     
-     font-weight: bold;
-}
-
-.footer-misc ul a:hover
-{
-     color : #D63031;
-}
-
-.footer-misc ul a li
-{ 
-    display: block;
-}
-
-.footer-contact
-{
-    margin-top: 16px;
-    margin-bottom: 16px;
-
-    color: white;
-    font-family:$footer-font; 
-}
-
-.mail
-{
-    text-decoration: none;
-    color:white;
-}
-
-.mail:hover
-{
-    
-    color: #D63031;
-}
-
-.footer-contact p
-{
-    @extend %no-margin-or-padding;
-    @extend %extend-width;
-
-    text-align: center;
-    
-    font-size: 0.875rem;
-}
-
-.footer-social
-{
-    margin-top: 16px;
-    margin-bottom: 16px;
-}
-
-.footer-social ul
-{
-    @extend %no-margin-or-padding;
-
-    display: flex;
-    justify-content: space-around;
-}
-
-.footer-social ul a
-{
-    @extend %no-margin-or-padding;
-
-    color: white;
-    
-}
-
-.footer-social ul a:hover 
-{
-    
-}
-
-.footer-social ul a li
-{
-    display: block;
-
-    text-decoration: none;
-    list-style-type: none;
-}
-
-.footer-social ul a li i
-{
-    font-size: 32px;
-}
-
-.selected
-{
-    color  : #D63031 !important;
-    border : 2px solid #D63031;
-
-    padding-left  : 8px;
-    padding-right : 8px;
-
-    border-radius : 4px;
-}
-
-.selected:hover
-{
-    border-radius: 0px;
-    
-}
-
 // Social
-
-// Rules
-@media only screen and (max-width: 768px) 
-{
-    header 
-    {
-        //display: none;
-    }
-
-    /* For mobile phones: */
-    header ul a
-    {
-        width: 100%;
-
-        text-align: center;
-        border-bottom: 1px solid white;
-    }
-
-    .selected
-    {
-        border: 0px solid #D63031;
-        border-bottom: 1px solid;
-
-        border-radius: 0px;
-    }
-
-    .footer-misc ul a
-    {
-        width: 100%;
-
-        margin  : 0px !important;
-        padding : 0px !important;
-
-        text-align    : center;
-        border-bottom : 1px solid black;
-    }
-
-    .hide_on_mobile
-    {
-        display: none;
-    }
-
-  }
