--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -5,7 +5,8 @@ header
     position : relative;
 
     // #000000 Black
-    background-color : #090828;
+    // #090828 default
+    background-color : #000000;
 
     box-shadow : 0px 0px
                  16px
