--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -41,6 +41,9 @@ header ul a
 
     margin-top: 8px;
     margin-bottom: 8px;
+    
+    margin-right: 16px;
+    margin-left: 16px;
 }
 
 header ul a:hover
