--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -45,8 +45,7 @@ header ul a
     margin-right : 64px;
     margin-left  : 64px;
 
-    border-bottom: rgba( 0, 0, 0,
-                           0.0 );
+    border-bottom: $selected_bottom_border solid rgba( 0, 0, 0, 0.0 );
 }
 
 header ul a:hover
@@ -64,7 +63,7 @@ header ul a li
 .selected
 {
     color  : #D63031 !important;
-    border-bottom: 4px solid #D63031;
+    border-bottom: $selected_bottom_border solid #D63031;
 
     padding-left  : 8px;
     padding-right : 8px;
