--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -6,7 +6,7 @@ header
 
     // #000000 Black
     // #090828 default
-    background-color : #000000;
+    background-color : $document_header_color;
 
     box-shadow : 0px 0px
                  16px
