--- a/scss/page/footer.scss
+++ b/scss/page/footer.scss
@@ -25,6 +25,8 @@ footer
     @extend %extend-width;
 
     padding-top: 3px;
+    
+    padding-bottom: 3px;
     font-size : 12px;
 
     text-align      : center;
