--- a/scss/page/footer.scss
+++ b/scss/page/footer.scss
@@ -25,6 +25,9 @@ footer
     @extend %extend-width;
 
     
+    padding-top: 6px;
+    padding-bottom: 6px;
+    
     font-size : 12px;
 
     text-align      : center;
