--- a/scss/page/footer.scss
+++ b/scss/page/footer.scss
@@ -125,14 +125,17 @@ footer
 
     margin-left: auto;
     margin-right: auto;
-    
+
+    width: 75px;
+    text-align: center;
+
     color: white;
 
 }
 
 .footer-social-container
 {
-    width: 50%;
+    
 }
 
 .footer-social ul a:hover 
