--- a/scss/page/footer.scss
+++ b/scss/page/footer.scss
@@ -147,7 +147,7 @@ footer
     list-style-type: none;
 }
 
-.footer-social ul div li a i
+.footer-social ul div a i li
 {
     font-size: 32px;
     text-align: center;
