--- a/scss/page/footer.scss
+++ b/scss/page/footer.scss
@@ -146,6 +146,13 @@ footer
 .footer-social-container
 {
     width: 50%;
+}
+
+.footer-social-container li 
+{
+    margin-right: auto;
+    margin-left: auto;
+    
     
 }
 
