--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -8,6 +8,16 @@ header
     // #090828 default
 }
 
+#header-overlay
+{
+    background-color : $document_header_color;
+
+    box-shadow : 0px 0px
+                 16px
+                 rgba( 0, 0, 0, 
+                         0.2 );
+}
+
 header ul
 {
     @extend %not-selecteble;
