--- a/scss/covers.scss
+++ b/scss/covers.scss
@@ -5,6 +5,10 @@
     height: 100%;
 
     background-image: url('../images/homepage/front.png');
+
     background-size: cover;
     background-position: center;
+
+    position: absolute;
+    top: -20px;
 }
