--- a/scss/covers.scss
+++ b/scss/covers.scss
@@ -2,7 +2,7 @@
 #cover-container-homepage
 {
     width: 100%;
-    height: 100%;
+    height: 550px;
 
     background-image: url('../images/homepage/front.png');
 
