--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -66,8 +66,10 @@ header ul a li
 
 .header_background
 {
+    top: 0px;
     height: 100%;
     width: 100%;
+
     background: black;
     z-index: -1;
 }
