--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -11,6 +11,10 @@ header
                  16px
                  rgba( 0, 0, 0, 
                          0.2 );
+
+    position: fixed;
+    top: 0px;
+    width: 100%;
 }
 
 header ul
