--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -87,7 +87,7 @@ header ul a li
     header ul a
     {
         width: 100%;
-
+        margin: 0px;
         text-align: center;
         border-bottom: 1px solid white;
     }
