--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -81,6 +81,7 @@ header ul a li
     header 
     {
         //display: none;
+        background-color : $document_header_color;
     }
 
     /* For mobile phones: */
