--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -91,6 +91,8 @@ header ul a li
         margin: 0px;
         text-align: center;
         border-bottom: 1px solid white;
+        margin-top: 16px;
+        margin-bottom: 16px;
     }
 
     .selected
