--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -82,6 +82,8 @@ header ul a li
     {
         //display: none;
         background-color : $document_header_color;
+        padding:0px;
+        margin: 0px;
     }
 
     /* For mobile phones: */
