--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -94,6 +94,7 @@ header ul a li
         text-align: center;
         border-bottom: 1px solid white;
         margin-top: 8px;
+        margin-bottom: 8px;
     }
 
     .selected
