--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -97,6 +97,11 @@ header ul a li
         margin-bottom: 8px;
     }
 
+    header ul a:last-child
+    {
+        margin-bottom: 0px;
+    }
+
     .selected
     {
         border: 0px solid #D63031;
