--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -104,9 +104,9 @@ header ul a li
 
     .selected
     {
-        border: 0px solid #D63031;
-        border-bottom: 1px solid;
-
+        border: 0px;
+        background-color: #D63031;
+        color: white;
         border-radius: 0px;
     }
 }
