--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -110,4 +110,9 @@ header ul a li
         
         border-radius: 0px;
     }
+
+    .selected:hover 
+    {
+        color: white !important;
+    }
 }
