--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -93,8 +93,8 @@ header ul a li
         margin: 0px;
         text-align: center;
         
-        margin-top: 8px;
-        margin-bottom: 8px;
+        padding-top: 8px;
+        padding-bottom: 8px;
     }
 
     .selected
