--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -1,3 +1,4 @@
+/*
 header
 {
     position : relative;
@@ -88,6 +89,7 @@ header ul a li
     }
 
     /* For mobile phones: */
+    /* 
     header ul a
     {
         width: 100%;
@@ -114,3 +116,5 @@ header ul a li
         color: white !important;
     }
 }
+
+*/
