--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -1,4 +1,4 @@
-/*
+/* Old
 header
 {
     position : relative;
@@ -116,5 +116,4 @@ header ul a li
         color: white !important;
     }
 }
-
 */
