--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -122,3 +122,22 @@ header ul a li
 {
     display: none;
 }
+
+.page_header_area
+{
+
+}
+
+/* 
+    Default Settings
+*/
+header
+{
+
+}
+
+header ul
+{
+    padding: 0px;
+    margin: 0px;
+}
