--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -125,6 +125,7 @@ header ul a li
 
 .page_header_area
 {
+    
 
 }
 
@@ -140,4 +141,14 @@ header ul
 {
     padding: 0px;
     margin: 0px;
+}
+
+header ul a 
+{
+    color:white;
+}
+
+header ul a li 
+{
+    
 }
