--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -153,7 +153,16 @@ header ul a
     color:white;
     text-decoration: none;
     text-transform: uppercase;
+    
     font-family: 'Open Sans';
+
+    font-size: 0.875rem;
+    
+    margin-top    : 8px;
+    margin-bottom : 8px;
+
+    margin-right : 64px;
+    margin-left  : 64px;
 }
 
 header ul a li 
