--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -165,6 +165,7 @@ header ul a
     text-transform  : uppercase;
     
     font-family : 'Open Sans';
+    font-weight: bold;
 
     font-size : 0.875rem;
     
