--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -168,6 +168,8 @@ header ul a
     font-family : 'Open Sans';
     font-weight: bold;
 
+    border-bottom: 2px solid rgba(255, 255, 255, 0.0) !important;
+
     font-size : 0.875rem;
     
     margin-top    : 8px;
