--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -168,7 +168,7 @@ header ul a
     font-family : 'Open Sans';
     
 
-    border-bottom: 2px solid rgba(255, 255, 255, 0.0) !important;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.0);
 
     font-size : 0.875rem;
     
