--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -167,7 +167,7 @@ header ul a
     text-decoration : none;
     text-transform  : uppercase;
     
-    font-family : 'Open Sans';
+    font-family : $header-font;
     
     border-bottom: 2px solid rgba(255, 255, 255, 0.0);
     
